Fix horizontal scrolling of game board on mobile

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -5,10 +5,12 @@
   padding: 0;
   -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    -webkit-overflow-scrolling: touch;
 }
 
 html {
   min-height:100vh;
+  max-width: 100vw;
   margin: 0px;
   padding: 0px;
   font-family: 'Lato', sans-serif;
@@ -17,6 +19,7 @@ html {
 
 body {
   min-height:100vh;
+  max-width: 100vw;
   margin: 0px;
   padding: 0px;
   font-size: 100%;
