--- a/src/assets/css/Game.css
+++ b/src/assets/css/Game.css
@@ -1,6 +1,7 @@
 .game {
   display: flex;
   min-height:100vh;
+  max-width: 100vw;
   flex-direction: column;
   align-items: center;
   opacity: 0;
@@ -13,7 +14,7 @@
 }
 
 .tile {
-  flex-basis: auto;
+  flex: 0 0 auto;
   width: 50px;
   height: 50px;
   padding: 0px;
@@ -83,13 +84,24 @@
 
 .board {
   display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
   height: 100%;
+  max-width: 100vw;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 80px;
 }
 
+@media (max-width: 500px) {
+  .board {
+    align-items: flex-start;
+  }
+} 
+
+
 .board-rows {
+  flex: 0 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -98,7 +110,7 @@
 
 .board-row {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   height: 50px;
   margin: 2px;
   padding: 0px;
@@ -109,8 +121,9 @@
   top: 0;
   width: 100vw;
   display: flex;
+  align-self: center;
   justify-content: center;
-  margin: 50px 2px 10px;
+  margin: 50px 0px 10px;
   padding: 10px;
   background-color: #1f2833;
 }
